--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<html>
+    <body>
+        <head>
+            <title>list</title>
+    <link rel="stylesheet" href="style.css">
+        </head>
+        <header>
+            <img src="/uploads/2020/12/header_0_1609082687.svg"/>
+            <nav>
+           <a href="#Розклад">Розклад</a>
+           <a href="#Про заняття">Про заняття</a>           
+           <a href="#Адреси">Адреси</a>   
+            </nav>
+            
+            </header>
+        <main>
+             <h1>Болдерінг</h1>
+              <img src="/uploads/2020/12/image1_0_1609082687.png"/>
+             <img src="/uploads/2020/12/image2_0_1609082687.png"/>
+             <img src="/uploads/2020/12/image3_0_1609082687.png"/>
 
+             <p>Ніколи не були на скелі? — Швидше, зробіть першу спробу залізти нагору! На наших майданчиках зали різної складності. Тренування безпечні, для новачків передбачено автострахування, у залах працюють інструктори. Для дітей виділені зони із захоплюючими атракціонами. Є абонемент, знижки та система індивідуальних занять. Перед відвідуванням, будь ласка, ознайомтесь із правилами техніки безпеки.</p>
+       
+        </main>
+        <footer>
+            <p>E-mail:</p>
+            <p>Телефон</p>
+        </footer>
+    </body>
+</html>
